# hitbox_fixer

./: .gitignore  .gitignore.bak  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: Clang.cmake  ClangTidy.cmake  Cppcheck.cmake  CppcheckSuppressions.txt  GNU.cmake  Intel.cmake  Tools.cmake  cmake-version4git.cmake  linux-i686-gcc-noGNUunique-gold-static-excludeSTDexport-oldGLIBC-noPIC-hidden-ipo-sections.cmake  linux-i686.cmake  win32-msvc-xp-static-ipo.cmake
dep/lz4/: CMakeLists.txt
dep/subhook/: CMakeLists.txt
include/cssdk/common/: r_studioint.h
include/cssdk/dlls/: enginecallback.h  hookchains.h  osconfig.h  util.h
include/cssdk/engine/: crc32c.cpp  crc32c.h  delta_packet.h  eiface.h  net.h  osconfig.h  progs.h  rehlds_api.h  rehlds_interfaces.h  server_static.h  static_map.h  struct.h  studio.h
include/cssdk/public/: interface.cpp  utlbuffer.cpp
include/cssdk/public/tier0/: dbg.h
include/metamod/: meta_api.h  osdep.h
include/shared/: shared.h
src/: animation.cpp  api.h  dllapi.cpp  engine_api.cpp  engine_rehlds_api.cpp  engine_rehlds_api.h  h_export.cpp  main.cpp  main.h  meta_api.cpp  mod_regamedll_api.cpp  mod_regamedll_api.h  precompiled.h  sdk_util.cpp
src/mem/: handles.cpp  handles.h  memutils.h  patternscan.cpp  patternscan.h  rtti.h
utils/: CDynPatcher.cpp  CDynPatcher.h  CSectionData.cpp  CSectionData.h
vis/: CMakeLists.txt
vis/dep/VGUI/: Dar.h  IBorder.h  IEngineVGui.h  IImage.h  IInput.h  IInputInternal.h  ILocalize.h  IPanel.h  IScheme.h  ISystem.h  IVGui.h  KeyCode.h  VGUI.h  VGUI_ActionSignal.h  VGUI_App.h  VGUI_Bitmap.h  VGUI_BitmapTGA.h  VGUI_Border.h  VGUI_BorderLayout.h  VGUI_BorderPair.h  VGUI_BuildGroup.h  VGUI_Button.h  VGUI_ButtonController.h  VGUI_ButtonGroup.h  VGUI_ChangeSignal.h  VGUI_CheckButton.h  VGUI_Color.h  VGUI_ComboKey.h  VGUI_ConfigWizard.h  VGUI_Cursor.h  VGUI_Dar.h  VGUI_DataInputStream.h  VGUI_Desktop.h  VGUI_DesktopIcon.h  VGUI_EditPanel.h  VGUI_EtchedBorder.h  VGUI_FileInputStream.h  VGUI_FlowLayout.h  VGUI_FocusChangeSignal.h  VGUI_FocusNavGroup.h  (+52 more)
vis/dep/VGUI/vgui_controls/: AnimatingImagePanel.cpp  AnimationController.cpp  BitmapImagePanel.cpp  BuildGroup.cpp  BuildGroup.h  BuildModeDialog.cpp  Button.cpp  Button.h  CheckButton.cpp  CheckButton.h  ChromeHTML.cpp  ChromeHTML.h  CircularProgressBar.cpp  ComboBox.cpp  ControllerMap.cpp  Controls.h  EditablePanel.cpp  EditablePanel.h  FileOpenDialog.cpp  FileOpenStateMachine.cpp  FileOpenStateMachine.h  FocusNavGroup.cpp  Frame.cpp  Frame.h  HTML.cpp  ImagePanel.cpp  ImagePanel.h  KeyRepeat.cpp  KeyRepeat.h  Label.cpp  Label.h  ListPanel.cpp  Menu.cpp  Menu.h  MenuItem.cpp  MessageDialog.cpp  Panel.cpp  Panel.h  PropertySheet.cpp  PropertySheet.h  (+24 more)
vis/dep/VGUI2/: IEngineVGui.h  IHTML.h  IPanel.h  ISurface.h
vis/src/: CStudioModelRenderer.h  main.cpp  precompiled.h
vis/src/auto_offset/: auto_offset.cpp  auto_offset.hpp
vis/src/clientdll/: clientdll.cpp  clientdll.hpp
vis/src/engine/: engine.cpp  engine.hpp
vis/src/utils/: CDynPatcher.cpp  CDynPatcher.h  CSectionData.cpp  CSectionData.h  LinuxTypesSupport.h  memory.cpp  memory.hpp  ntdll.h  patch.cpp  patch.hpp  rib.cpp  win32exception.cpp  win32exception.hpp
